Fixed scrollbar selection and added font to titles

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -19,6 +19,7 @@
 h1 {
   color: #dddddd;
   font-size: calc(18px + 2vh);
+  font-family: 'Roboto';
 }
 
 span {
